client/frontend/sale.css
.product {
    background-color: var(--lime-green-alpha);
    padding: 20px;
    min-width: 20%;
    margin: 5px;
}

.product > p {
    margin: 0px;
}

.product > h3 {
    margin: 0;
}

.product-list {
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
}

.products-container {
    width: 100%;
    overflow: auto;
    max-height: 100vh;
    margin: 8px;
}

.sale-container {
    display: grid;
    grid-template-columns: 70% 30%;
    height: 100%;
}

.sidebar {
    display: grid;
    grid-template-rows: 60% 40%;
    background-color: #000;
}

.ticket {
    padding: 15px;
}

.ticket > h2, .ticket > h3 {
    margin: 2px 0;
}

.spacer {
    padding: 1px;
    margin: 5px 0;
    background-color: var(--lime-green);
    border-radius: 5px;
}

#order-table {
    width: 100%;
    max-height: 45vh;
    min-height: 45vh;
}

#order-table tr {
    display: block;
    max-height: 30px;
}

#order-table td:nth-child(2) {
    width:70%;
}

#order-table td:nth-child(3) {
    text-align: right;
    width: 100%;
}

#order-total {
    text-align: right;
    margin-top: 10px;
}

body {
    margin: 0;
}

.functions {
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
}

.functions > div {
    background-color: var(--mid-grey);
    border: 5px solid;
    border-color: var(--grey);
    max-height: 20%;
    text-align: center;
    align-items: center;
    display: flex;
    justify-content: center;
}

.modal {
    color: var(--grey);
    padding: 20px;
    text-align: center;
}

.sale-keypad {
    display: grid;
    gap: 1rem;
}

.sale-keypad-row {
    display: flex;
    justify-content: space-between;
}

.sale-keypad-key {
    font-family: var(--default-font);
    width: 30%;
    padding: 1.25rem;
    font-size: 1.5rem;
    border: none;
    border-radius: 0.5rem;
    color: #222222;
    background-color: white;
    box-shadow: 0 0.25rem 0.6rem rgba(0, 0, 0, 0.5);
}

.primary-btn {
    background: var(--lime-green);
    color: var(--grey);
}

.modal-input {
    font-family: var(--default-font);
    width: 100%;
    padding: 1rem;
    font-size: 1.6rem;
    text-align: center;
    border: none;
    border-radius: 0.5rem;
    color: #222222;
    background-color: white;
    box-shadow: inset 0 0 0.5rem var(--grey);
    margin-bottom: 1.5rem;
    outline: none;
}

